# hello-world

./: .gitignore  README.md
ai-messing/: Untitled.ipynb  autograd-test.py  neural-net.ipynb  readme  test.py  tut.py
ai-messing/.ipynb_checkpoints/: neural-net-checkpoint.ipynb
algorand-tmp/: package-lock.json  test.js  utils.ts  xact.ts
cadquery/: test.py
cuda-testing/: a.out  build.sh  hello  hello.cu  vector_add  vector_add.c  vector_add.cu
go-concurrency-messing/: prosume.go  readme  server.go
go-rtmidi-messing/: go.mod  go.sum  main.go  test.go
lisp-messing/: run-as.sh  run.sh  test-as.ls  test.ls
maxima-messing/: readme  test.mac
pyaudiomixer-testing/python-rtmixer/examples/: sampler.py  signal_processing.py
sverchok-messing/: spirals.xml
wasm-messing/: README.md  a.out.js  sdl.js  sdl.wasm
wx-messing/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  md  wxApp
